@@ -18,52 +18,52 @@ body.page-admin {
   overflow: visible;
 }
 
-.slick-wrapper--fullscreen {
+.slick--skin--fullscreen {
   height: 100%;
   left: 0;
+  min-height: 100%;
   position: fixed;
   top: 0;
   width: 100%;
   z-index: 8;
 }
 
-.page-admin .slick-wrapper--fullscreen {
+.page-admin .slick--skin--fullscreen {
+  min-height: 120px;
   position: relative;
 }
 
-.slick-wrapper--fullscreen .slick--skin--fullscreen,
-.slick-wrapper--fullscreen .slick__slider {
+.slick--skin--fullscreen .slick__slider {
   height: 100%;
   min-height: 100%;
 }
 
-.page-admin .slick-wrapper--fullscreen .slick--skin--fullscreen,
-.page-admin .slick-wrapper--fullscreen .slick__slider {
+.page-admin .slick--skin--fullscreen .slick__slider {
   min-height: 120px;
 }
 
-.slick-wrapper--fullscreen .slick--skin--fullscreen .slick-list,
-.slick-wrapper--fullscreen .slick--skin--fullscreen .slick-track,
-.slick-wrapper--fullscreen .slick--skin--fullscreen .slick__slide,
-.slick-wrapper--fullscreen .slick--skin--fullscreen .slide__content,
-.slick-wrapper--fullscreen .slick--skin--fullscreen .media,
-.slick-wrapper--fullscreen .slick--skin--fullscreen .slide__media {
+.slick--skin--fullscreen .slick-list,
+.slick--skin--fullscreen .slick-track,
+.slick--skin--fullscreen .slick__slide,
+.slick--skin--fullscreen .slide__content,
+.slick--skin--fullscreen .media,
+.slick--skin--fullscreen .slide__media {
   height: 100% !important;
   min-height: 320px;
 }
 
-.slick-wrapper--fullscreen .slick--skin--fullscreen .slick-track {
+.slick--skin--fullscreen .slick-track {
   margin: 0;
   padding: 0;
 }
 
-.slick-wrapper--fullscreen .slick--skin--fullscreen .slick__slide {
+.slick--skin--fullscreen .slick__slide {
   background-repeat: no-repeat;
   background-position: center center;
   background-size: cover;
 }
 
-.slick-wrapper--fullscreen .slick--skin--fullscreen .slide__media img {
+.slick--skin--fullscreen .slide__media img {
   height: auto;
   left: 0;
   margin: 0 auto;
@@ -74,7 +74,7 @@ body.page-admin {
   width: 100%;
 }
 
-.slick-wrapper--fullscreen .slick--skin--fullscreen .slide__constrained {
+.slick--skin--fullscreen .slide__constrained {
   left: 50%;
   margin-left: -49%;
   position: absolute;
@@ -84,30 +84,8 @@ body.page-admin {
   min-height: 210px;
 }
 
-.slick-wrapper--fullscreen .slick--skin--fullscreen .slide__constrained .slide__caption {
+.slick--skin--fullscreen .slide__constrained .slide__caption {
   position: relative;
-}
-
-@media (min-width: 65em) {
-  .slick-wrapper--fullscreen .slick--skin--fullscreen .slide__constrained {
-    left: 50%;
-    margin-left: -49%;
-    position: absolute;
-    top: 20%;
-    width: 98%;
-    z-index: 2;
-  }
-}
-
-@media (min-width: 90em) {
-  .slick-wrapper--fullscreen .slick--skin--fullscreen .slide__constrained {
-    left: 50%;
-    margin-left: -585px;
-    position: absolute;
-    top: 0;
-    width: 1170px;
-    z-index: 2;
-  }
 }
 
 .slick--skin--fullscreen .slide__caption {
@@ -141,4 +119,26 @@ body.page-admin {
 
 .slick--skin--fullscreen .slick-dots {
   bottom: 20px;
+}
+
+@media (min-width: 65em) {
+  .slick--skin--fullscreen .slide__constrained {
+    left: 50%;
+    margin-left: -49%;
+    position: absolute;
+    top: 20%;
+    width: 98%;
+    z-index: 2;
+  }
+}
+
+@media (min-width: 90em) {
+  .slick--skin--fullscreen .slide__constrained {
+    left: 50%;
+    margin-left: -585px;
+    position: absolute;
+    top: 0;
+    width: 1170px;
+    z-index: 2;
+  }
 }
